# docx-embed

./: .gitignore  INSIGHTS.md  INSIGHTS.zh-CN.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
data/: llm-social-impact-fixture.docx
docs/: DESIGN.md  dify-docx-parsing-research.md  docling-xlsx-merged-cells-performance.md  docx-markdown-evaluation-report.md  mineru-backend-evaluation.md  ragflow-docx-parsing-research.md  weknora-docx-parsing-research.md  xlsx-parsing-guide.md  xlsx-parsing-guide.zh-CN.md
edp/: __init__.py  cli.py  docx_notes.py  extractor.py  main_parser.py  manifest_builder.py  merger.py  models.py  path_utils.py  ragflow_parser.py  recursive_parser.py  resource_preview.py
edp/common/: __init__.py  markdown_normalizer.py
edp/xlsx/: __init__.py  assets.py  parser.py
evaluation/: __init__.py  fact_card.py  layer_fidelity.py  layer_one.py  layer_two.py  misses.tsv  misses_report.md  results.tsv  results_summary.tsv  run_eval.py
examples/: __init__.py  run_parser.py  run_pipeline.py
scripts/: batch_run_all.sh  build_groundtruth.py
tests/: conftest.py  generate_demo_xlsx.py  test_T11_embed_text.py  test_T12_embed_image.py  test_T13_embed_package.py  test_cli_cross_platform.py  test_cli_parser.py  test_cli_pipeline.py  test_dependency_metadata.py  test_document_assets_markitdown.py  test_docx_notes.py  test_layer_fidelity.py  test_main_parser_docling.py  test_main_parser_markitdown.py  test_main_parser_mineru.py  test_main_parser_ragflow.py  test_run_eval_methods.py  test_xlsx_package.py
(+13 files in other folders)
